# SemantIQ

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
chunking/: __init__.py  base.py  code_chunker.py  pdf_chunker.py  word_doc_chunker.py
docs/: CLI.md  CONFIGURATION.md  EVALUATION.md  EXTENSION.md  TROUBLESHOOTING.md  VECTOR_DB_SETUP.md
embedding/: __init__.py  embedding_manager.py
evaluation/: __init__.py  evaluator.py  ground_truth.py  metrics.py
scripts/: compare_experiments.py  create_ground_truth.py  evaluate_retrieval.py  ingest_to_faiss.py  ingest_to_milvus.py  query_vectordb.py  run_chunking.py
utils/: __init__.py  logger.py  storage.py
vector_db/: ___init__.py  faiss_client.py  milvus_client.py
