[project]
name = "SemantIQ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pillow>=12.0.0",
    "pymilvus>=2.6.2",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
]
